--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --config webpack.config.js",
-    "build:production": "NODE_ENV=production npx webpack --config webpack.config.js"
+    "build": "npx webpack --config webpack.config.js && sh ./scripts/validate-css.sh",
+    "build:production": "NODE_ENV=production npx webpack --config webpack.config.js && sh ./scripts/validate-css.sh"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/oleh-polishchuk/webpack-bootstrap#readme",
   "dependencies": {
     "css-loader": "^0.28.11",
+    "css-validator-loader": "^1.1.3",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
